@@ -1,15 +1,15 @@
+## $Id$
 ## Makefile.am for the TeX Live subdirectory texk/dvi2tty/
 ##
-## Copyright (C) 2009-2015 Peter Breitenlohner <tex-live@tug.org>
+## Copyright 2017 Karl Berry <tex-live@tug.org>
+## Copyright 2009-2015 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
-##
+
 ## We want to re-distribute the whole original dvi2tty source tree.
-##
 EXTRA_DIST = $(DVI2TTY_TREE)
 
 ## Patches applied to the original source tree
-##
-EXTRA_DIST += dvi2tty-PATCHES
+EXTRA_DIST += TLpatches
 
 # Files not to be distributed
 include $(srcdir)/../../am/dist_hook.am
@@ -53,7 +53,7 @@ TESTS = disdvi.test dvi2tty.test
 disdvi.log: disdvi$(EXEXET)
 dvi2tty.log: dvi2tty$(EXEEXT)
 
-TESTS_ENVIRONMENT = DVI2TTY_TREE=$(DVI2TTY_TREE)
+AM_TESTS_ENVIRONMENT = DVI2TTY_TREE=$(DVI2TTY_TREE); export DVI2TTY_TREE;
 EXTRA_DIST += $(TESTS)
 
 ## disdvi.test
@@ -64,4 +64,3 @@ EXTRA_DIST += ligtest.tty test.tty testc.tty tests.tty testu.tty
 DISTCLEANFILES += ligtest.out test.out testc.out tests.out testu.out
 DISTCLEANFILES += table.out tablec.out tables.out tableu.out tableuC.out
 DISTCLEANFILES += tableEu.out tableEu1.out tableEuC.out tableEua.out
-
