@@ -1,6 +1,7 @@
-#! /bin/sh
-
-# Copyright (C) 2012 Peter Breitenlohner <tex-live@tug.org>
+#! /bin/sh -vx
+# $Id$
+# Copyright 2017 Karl Berry <tex-live@tug.org>
+# Copyright 2012 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
 test_src=$srcdir/$DVI2TTY_TREE/test
